# guile-redis

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  README.org  configure.ac  env.in  redis.scm
redis/: Makefile.am  commands.scm  connection.scm  main.scm  pubsub.scm  utils.scm
redis/commands/: Makefile.am  connection.scm  define.scm  hashes.scm  keys.scm  lists.scm  publish.scm  scripting.scm  server.scm  sets.scm  sortedsets.scm  strings.scm  transactions.scm
